<resources>
    <string name="app_name">Calculadora</string>
    <string name="txt_valor1">Primer Valor</string>
    <string name="txt_valor2">Segundo valor</string>
    <string name="rb_sumar">Sumar</string>
    <string name="rb_restar">Restar</string>
    <string name="rb_producto">Multiplicar</string>
    <string name="rb_dividir">Dividir</string>
    <string name="button">Calcular</string>
    <string name="tv_resultado">Resultado</string>
</resources>