<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_valor1"
        android:layout_width="268dp"
        android:layout_height="64dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txt_valor1"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_valor2"
        android:layout_width="265dp"
        android:layout_height="64dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txt_valor2"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="351dp"
        android:layout_height="206dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor2">

        <RadioButton
            android:id="@+id/rb_suma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_sumar"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_resta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_restar"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_producto"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_division"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/rb_dividir"
            android:textSize="24sp" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="187dp"
        android:layout_height="66dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:onClick="Calcular"
        android:text="@string/button"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="141dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_resultado"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>